fix: improve token validation and error handling in AuthContext; streamline authentication flow by utilizing interceptors for token refresh and enhancing error responses in localization files for better user feedback

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -562,8 +562,8 @@
             "booksUsed": "Books you've chatted about",
             "noBooksYet": "No chat history yet",
             "noBooksHint": "Start chatting with AI about your books to see usage here",
-            "thisMonth": "This month",
-            "allTime": "All time",
+            "thisMonth": "{{count}} this month",
+            "allTime": "{{count}} all time",
             "requests": "{{count}} request",
             "requests_plural": "{{count}} requests",
             "lastUsed": "Last used {{date}}"
@@ -682,12 +682,93 @@
         "bookCompleted": "Congratulations! You've finished this book!"
     },
     "errors": {
+        "BAD_REQUEST": "Invalid request",
+        "AUTH_UNAUTHENTICATED": "You must be logged in to perform this action",
+        "AUTH_FORBIDDEN": "You don't have permission to perform this action",
+        "RESOURCE_NOT_FOUND": "Resource not found",
+        "CONFLICT": "A conflict occurred with the current state",
+        "VALIDATION_ERROR": "Please check the provided information",
+        "RATE_LIMITED": "Too many requests. Please try again later",
+        "INTERNAL_SERVER_ERROR": "An unexpected error occurred. Please try again",
+        "CLIENT_ERROR": "An error occurred. Please try again",
+
         "AUTH_EMAIL_ALREADY_USED": "An account with this email already exists",
         "AUTH_USERNAME_TAKEN": "This username is already taken, please choose another one",
-        "AUTH_INVALID_CURRENT_PASSWORD": "Current password is incorrect",
+        "AUTH_INVALID_CREDENTIALS": "Invalid email or password",
+        "AUTH_INVALID_TOKEN": "Invalid or expired token",
         "AUTH_NO_PASSWORD": "Cannot change password for Google accounts",
+        "AUTH_INVALID_CURRENT_PASSWORD": "Current password is incorrect",
+        "AUTH_GOOGLE_DENIED": "Google authentication was denied",
+        "AUTH_GOOGLE_FAILED": "Google authentication failed. Please try again",
+        "AUTH_INVALID_REFRESH_TOKEN": "Your session has expired. Please log in again",
+
+        "USER_NOT_FOUND": "User not found",
+        "USER_USERNAME_INVALID": "Invalid username format",
+        "USER_PLUS_REQUIRED": "This feature requires Trackr Plus",
+        "USER_AVATAR_NO_IMAGE_PROVIDED": "Please select an image for your avatar",
+        "USER_AVATAR_INVALID": "Invalid image format for avatar",
+        "USER_AVATAR_GIF_PLUS_REQUIRED": "Animated avatars require Trackr Plus",
+        "USER_BACKDROP_PLUS_REQUIRED": "Custom backdrops require Trackr Plus",
+        "USER_BACKDROP_NO_IMAGE_PROVIDED": "Please select an image for your backdrop",
+        "USER_BACKDROP_INVALID": "Invalid image format for backdrop",
+        "USER_TOP_NOT_FOUND": "Favorite book not found",
+        "ACTIVITY_PRIVATE": "This user's activity is private",
+        "INVALID_USERNAME": "Invalid username. Use only letters, numbers, and underscores",
+
+        "BOOK_NOT_FOUND": "Book not found",
+        "BOOK_SEARCH_QUERY_REQUIRED": "Please enter a search term",
+
+        "LIBRARY_PRIVATE": "This user's library is private",
+        "BOOK_ALREADY_IN_LIBRARY": "This book is already in your library",
+        "BOOK_NOT_FOUND_IN_LIBRARY": "This book is not in your library",
+        "BOOK_ALREADY_IN_TOP": "This book is already in your favorites",
         "BOOKS_TOP_LIMIT_REACHED": "You have reached the limit of 5 favorite books",
-        "E_INVALID_CREDENTIALS": "Invalid email or password",
+        "BOOK_NOT_FOUND_IN_TOP": "This book is not in your favorites",
+
+        "LIST_SEARCH_QUERY_MISSING": "Please enter a search term",
+        "LIST_NOT_FOUND": "Shelf not found",
+        "LIST_VIEW_FORBIDDEN": "You don't have permission to view this shelf",
+        "LIST_NOT_OWNER": "You can only modify your own shelves",
+        "LIST_PLUS_REQUIRED": "This feature requires Trackr Plus",
+        "LIST_BOOK_ALREADY_EXISTS": "This book is already in this shelf",
+        "LIST_BOOK_NOT_FOUND": "This book is not in this shelf",
+        "LIST_PREMIUM_REQUIRED": "This feature requires Trackr Plus",
+        "LIST_BACKDROP_MISSING": "Please select a backdrop image",
+        "LIST_BACKDROP_INVALID": "Invalid image format for backdrop",
+        "LIST_LIKE_PRIVATE_FORBIDDEN": "You cannot like a private shelf",
+        "LIST_ALREADY_LIKED": "You have already liked this shelf",
+        "LIST_LIKE_NOT_FOUND": "You haven't liked this shelf",
+        "LIST_SAVE_OWN_FORBIDDEN": "You cannot save your own shelf",
+        "LIST_SAVE_PRIVATE_FORBIDDEN": "You cannot save a private shelf",
+        "LIST_ALREADY_SAVED": "You have already saved this shelf",
+        "LIST_SAVE_NOT_FOUND": "You haven't saved this shelf",
+
+        "BOOK_NOT_TRACKED": "You must first add this book to your library",
+        "BOOK_NOT_RATED": "You must first rate this book",
+        "REVIEW_ALREADY_EXISTS": "You have already published a review for this book",
+        "REVIEW_NOT_FOUND": "Review not found",
+        "REVIEW_NOT_OWNED": "You can only edit your own reviews",
+        "REVIEW_ALREADY_LIKED": "You have already liked this review",
+        "REVIEW_NOT_LIKED": "You haven't liked this review",
+
+        "CATEGORY_NOT_FOUND": "Category not found",
+
+        "INVALID_INPUT": "Invalid input provided",
+        "NOT_FOUND": "Resource not found",
+        "DUPLICATE_REPORT": "You have already reported this content",
+        "FORBIDDEN": "You don't have permission to perform this action",
+        "INVALID_STATUS": "Invalid status",
+
+        "CANNOT_FOLLOW_SELF": "You cannot follow yourself",
+        "CONNECTIONS_PRIVATE": "This user's connections are private",
+
+        "STATS_PLUS_REQUIRED": "Statistics require Trackr Plus",
+        "STATS_PRIVATE": "This user's statistics are private",
+
+        "CHAT_LIMIT_REACHED": "You have reached your chat limit for this month",
+
+        "ALREADY_REVIEWED": "This content has already been reviewed",
+
         "errorCorrectionForm": "Please correct the errors in the form"
     },
     "changePassword": {
