--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -453,7 +453,7 @@
         "issue": "Numéro",
         "lastChapterRead": "Dernier chapitre lu",
         "lastIssueRead": "Dernier numéro lu",
-        "lastReadOn": "Dernière lecture il y a {{time}}",
+        "lastReadOn": "Dernière lecture {{time}}",
         "chaptersLeft": "Plus que {{chapters}} chapitre(s)",
         "issuesLeft": "Plus que {{issues}} numéro(s)",
         "youRatedIt": "Vous avez noté ce livre",
@@ -562,8 +562,8 @@
             "booksUsed": "Livres sur lesquels vous avez discuté",
             "noBooksYet": "Aucun historique de chat",
             "noBooksHint": "Commencez à discuter avec l'IA sur vos livres pour voir l'utilisation ici",
-            "thisMonth": "Ce mois-ci",
-            "allTime": "Total",
+            "thisMonth": "{{count}} ce mois-ci",
+            "allTime": "{{count}} total",
             "requests": "{{count}} requête",
             "requests_plural": "{{count}} requêtes",
             "lastUsed": "Dernière utilisation {{date}}"
@@ -683,12 +683,93 @@
         "bookCompleted": "Félicitations ! Vous avez terminé ce livre !"
     },
     "errors": {
+        "BAD_REQUEST": "Requête invalide",
+        "AUTH_UNAUTHENTICATED": "Vous devez être connecté pour effectuer cette action",
+        "AUTH_FORBIDDEN": "Vous n'avez pas la permission d'effectuer cette action",
+        "RESOURCE_NOT_FOUND": "Ressource introuvable",
+        "CONFLICT": "Un conflit est survenu avec l'état actuel",
+        "VALIDATION_ERROR": "Veuillez vérifier les informations fournies",
+        "RATE_LIMITED": "Trop de requêtes. Veuillez réessayer plus tard",
+        "INTERNAL_SERVER_ERROR": "Une erreur inattendue est survenue. Veuillez réessayer",
+        "CLIENT_ERROR": "Une erreur est survenue. Veuillez réessayer",
+
         "AUTH_EMAIL_ALREADY_USED": "Un compte avec cet email existe déjà",
         "AUTH_USERNAME_TAKEN": "Ce nom d'utilisateur est déjà pris, veuillez en choisir un autre",
-        "AUTH_INVALID_CURRENT_PASSWORD": "Le mot de passe actuel est incorrect",
+        "AUTH_INVALID_CREDENTIALS": "Email ou mot de passe incorrect",
+        "AUTH_INVALID_TOKEN": "Token invalide ou expiré",
         "AUTH_NO_PASSWORD": "Impossible de changer le mot de passe pour les comptes Google",
+        "AUTH_INVALID_CURRENT_PASSWORD": "Le mot de passe actuel est incorrect",
+        "AUTH_GOOGLE_DENIED": "L'authentification Google a été refusée",
+        "AUTH_GOOGLE_FAILED": "L'authentification Google a échoué. Veuillez réessayer",
+        "AUTH_INVALID_REFRESH_TOKEN": "Votre session a expiré. Veuillez vous reconnecter",
+
+        "USER_NOT_FOUND": "Utilisateur introuvable",
+        "USER_USERNAME_INVALID": "Format de nom d'utilisateur invalide",
+        "USER_PLUS_REQUIRED": "Cette fonctionnalité nécessite Trackr Plus",
+        "USER_AVATAR_NO_IMAGE_PROVIDED": "Veuillez sélectionner une image pour votre avatar",
+        "USER_AVATAR_INVALID": "Format d'image invalide pour l'avatar",
+        "USER_AVATAR_GIF_PLUS_REQUIRED": "Les avatars animés nécessitent Trackr Plus",
+        "USER_BACKDROP_PLUS_REQUIRED": "Les bannières personnalisées nécessitent Trackr Plus",
+        "USER_BACKDROP_NO_IMAGE_PROVIDED": "Veuillez sélectionner une image pour votre bannière",
+        "USER_BACKDROP_INVALID": "Format d'image invalide pour la bannière",
+        "USER_TOP_NOT_FOUND": "Livre favori introuvable",
+        "ACTIVITY_PRIVATE": "L'activité de cet utilisateur est privée",
+        "INVALID_USERNAME": "Nom d'utilisateur invalide. Utilisez uniquement des lettres, chiffres et underscores",
+
+        "BOOK_NOT_FOUND": "Livre introuvable",
+        "BOOK_SEARCH_QUERY_REQUIRED": "Veuillez entrer un terme de recherche",
+
+        "LIBRARY_PRIVATE": "La bibliothèque de cet utilisateur est privée",
+        "BOOK_ALREADY_IN_LIBRARY": "Ce livre est déjà dans votre bibliothèque",
+        "BOOK_NOT_FOUND_IN_LIBRARY": "Ce livre n'est pas dans votre bibliothèque",
+        "BOOK_ALREADY_IN_TOP": "Ce livre est déjà dans vos favoris",
         "BOOKS_TOP_LIMIT_REACHED": "Vous avez atteint la limite des 5 livres favoris",
-        "E_INVALID_CREDENTIALS": "Email ou mot de passe incorrect",
+        "BOOK_NOT_FOUND_IN_TOP": "Ce livre n'est pas dans vos favoris",
+
+        "LIST_SEARCH_QUERY_MISSING": "Veuillez entrer un terme de recherche",
+        "LIST_NOT_FOUND": "Étagère introuvable",
+        "LIST_VIEW_FORBIDDEN": "Vous n'avez pas la permission de voir cette étagère",
+        "LIST_NOT_OWNER": "Vous ne pouvez modifier que vos propres étagères",
+        "LIST_PLUS_REQUIRED": "Cette fonctionnalité nécessite Trackr Plus",
+        "LIST_BOOK_ALREADY_EXISTS": "Ce livre est déjà dans cette étagère",
+        "LIST_BOOK_NOT_FOUND": "Ce livre n'est pas dans cette étagère",
+        "LIST_PREMIUM_REQUIRED": "Cette fonctionnalité nécessite Trackr Plus",
+        "LIST_BACKDROP_MISSING": "Veuillez sélectionner une image de bannière",
+        "LIST_BACKDROP_INVALID": "Format d'image invalide pour la bannière",
+        "LIST_LIKE_PRIVATE_FORBIDDEN": "Vous ne pouvez pas aimer une étagère privée",
+        "LIST_ALREADY_LIKED": "Vous avez déjà aimé cette étagère",
+        "LIST_LIKE_NOT_FOUND": "Vous n'avez pas aimé cette étagère",
+        "LIST_SAVE_OWN_FORBIDDEN": "Vous ne pouvez pas sauvegarder votre propre étagère",
+        "LIST_SAVE_PRIVATE_FORBIDDEN": "Vous ne pouvez pas sauvegarder une étagère privée",
+        "LIST_ALREADY_SAVED": "Vous avez déjà sauvegardé cette étagère",
+        "LIST_SAVE_NOT_FOUND": "Vous n'avez pas sauvegardé cette étagère",
+
+        "BOOK_NOT_TRACKED": "Vous devez d'abord ajouter ce livre à votre bibliothèque",
+        "BOOK_NOT_RATED": "Vous devez d'abord noter ce livre",
+        "REVIEW_ALREADY_EXISTS": "Vous avez déjà publié un avis pour ce livre",
+        "REVIEW_NOT_FOUND": "Avis introuvable",
+        "REVIEW_NOT_OWNED": "Vous ne pouvez modifier que vos propres avis",
+        "REVIEW_ALREADY_LIKED": "Vous avez déjà aimé cet avis",
+        "REVIEW_NOT_LIKED": "Vous n'avez pas aimé cet avis",
+
+        "CATEGORY_NOT_FOUND": "Catégorie introuvable",
+
+        "INVALID_INPUT": "Données fournies invalides",
+        "NOT_FOUND": "Ressource introuvable",
+        "DUPLICATE_REPORT": "Vous avez déjà signalé ce contenu",
+        "FORBIDDEN": "Vous n'avez pas la permission d'effectuer cette action",
+        "INVALID_STATUS": "Statut invalide",
+
+        "CANNOT_FOLLOW_SELF": "Vous ne pouvez pas vous suivre vous-même",
+        "CONNECTIONS_PRIVATE": "Les connexions de cet utilisateur sont privées",
+
+        "STATS_PLUS_REQUIRED": "Les statistiques nécessitent Trackr Plus",
+        "STATS_PRIVATE": "Les statistiques de cet utilisateur sont privées",
+
+        "CHAT_LIMIT_REACHED": "Vous avez atteint votre limite de chat pour ce mois",
+
+        "ALREADY_REVIEWED": "Ce contenu a déjà été examiné",
+
         "errorCorrectionForm": "Veuillez corriger les erreurs dans le formulaire"
     },
     "changePassword": {
