feat: update ChatScreen to replace Circle component with logo image for improved branding; modify API endpoint for local development and enhance loading messages in English and French translations

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -545,6 +545,11 @@
     "chat": {
         "sources": "Used sources",
         "messagePlaceholder": "Ask a question",
+        "loading": {
+            "thinking": "Thinking",
+            "searching": "Searching the web",
+            "writing": "Writing"
+        },
         "predefinedQuestions": {
             "title": "Try something like...",
             "summarizeLastChapter": "Summarize the last chapter read",
