--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -545,6 +545,11 @@
     "chat": {
         "sources": "Sources utilisées",
         "messagePlaceholder": "Posez votre question",
+        "loading": {
+            "thinking": "Réflexion",
+            "searching": "Recherche sur le web",
+            "writing": "Rédaction"
+        },
         "predefinedQuestions": {
             "title": "Essayez quelque chose comme...",
             "summarizeLastChapter": "Résume le dernier chapitre lu",
