feat: Add Pinned Book feature for Trackr Plus users
- Add PinnedBookCard component with gradient background
- Add pinned book hooks (usePinnedBook, usePinnedBookWithProgress, etc.)
- Add mutations for pin/unpin operations
- Integrate PinnedBookCard into home screen
- Add translations for English and French
- Add comprehensive documentation

Features:
- Modern card design with book cover and gradient background
- Reading progress bar
- AI summary display
- Trackr Plus subscription check
- Empty state with call-to-action

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -839,6 +839,19 @@
             "supportDevDesc": "Help me build new features and improve Trackr"
         }
     },
+    "pinnedBook": {
+        "title": "Pinned Book",
+        "pinned": "Pinned",
+        "pinBook": "Pin to home",
+        "unpinBook": "Remove pin",
+        "pinSuccess": "Book pinned to home screen",
+        "unpinSuccess": "Book removed from home screen",
+        "plusOnly": "Pinned Book is a Trackr Plus feature",
+        "aiSummary": "AI Summary",
+        "readingProgress": "Reading progress",
+        "noPinnedBook": "Pin a book to see it here",
+        "tapToPin": "Tap a book and pin it to display it on your home screen"
+    },
     "notifications": {
         "title": "Notifications",
         "empty": "No notifications",
