feat(comments): support deep nesting with lazy loading
- Add depth field to ReviewComment type
- Add getCommentReplies API method for lazy loading
- Add useCommentReplies hook
- Update CommentItem for recursive rendering with:
  - Max visual indentation (5 levels)
  - Thread line indicator for nested comments
  - Lazy loading button for deep replies
- Add translations (EN/FR) for comment features

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -553,7 +553,14 @@
             "deleteFailed": "Failed to delete review",
             "notFound": "Review not found",
             "notOwned": "You can only edit your own reviews"
-        }
+        },
+        "comments": "Comments",
+        "noComments": "No comments yet. Be the first to comment!",
+        "reply": "Reply",
+        "replyingTo": "Replying to",
+        "viewReplies": "View {{count}} replies",
+        "loadMoreReplies": "Load more replies",
+        "commentPlaceholder": "Write a comment..."
     },
     "chat": {
         "sources": "Used sources",
